# cortex

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: cortex - TDD.md
examples/: basic_usage.py  clara_integration.py
src/cortex/: __init__.py  algorithms.py  cli.py  config.py  manager.py  models.py  multiuser.py  observability.py
src/cortex/consolidation/: __init__.py  compaction.py  contradiction_detector.py  pattern_extractor.py  runner.py
src/cortex/migration/: __init__.py  direct_migration.py  mem0_migration.py  schema_detector.py
src/cortex/stores/: __init__.py  graph_store.py  postgres_store.py  redis_store.py
src/cortex/utils/: __init__.py  budget.py  cache.py  embedder.py  entity_extractor.py  scorer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_consolidation.py  test_migration.py  test_multi_user.py  test_store_retrieve_cycle.py
tests/unit/: test_algorithms.py  test_budget.py  test_cache.py  test_churn.py  test_direct_migration.py  test_embedder.py  test_entity_extractor.py  test_graph_store.py  test_redis_store.py  test_schema_detector.py  test_scorer.py
